# example-rust-clean-architecture-web-api

./: Cargo.toml  README.md  run.sh
db/: Dockerfile  build_and_run.sh
db/initdb/: 01_init.sql  02_create_table.sql
src/: connection_pool.rs  lib.rs  main.rs
src/domain/: user.rs
src/driver/: db_driver.rs
src/gateway/: user.rs
src/port/: user.rs
src/rest/: user.rs
src/usecase/: user.rs
