[package]
name = "example-rust-clean-architecture-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
mockall = "0.10.2"
async-trait = "0.1.58"
tokio ={ version = "1.22.0", features= ["macros"]}
serde = { version = "1.0.147", features = ["derive"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
envy = "0.4"
once_cell = "1.16.0"
clippy = "0.0.302"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
